[gd_scene load_steps=9 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/mainmenu/title_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/mainmenu/story_mode_btn.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/mc/idle_2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/mc/idle_1.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/mc/idle_3.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/mc/idle_0.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="Logo" type="Sprite" parent="."]

[node name="Title" type="Label" parent="."]
margin_left = 64.0
margin_top = 48.0
margin_right = 496.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 2 )
text = "Re:Group"

[node name="StoryMode" type="Label" parent="."]
margin_left = 64.0
margin_top = 192.0
margin_right = 224.0
margin_bottom = 212.0
text = "Story mode"
script = ExtResource( 3 )

[node name="ArcadeMode" type="Label" parent="."]
margin_left = 64.0
margin_top = 224.0
margin_right = 224.0
margin_bottom = 244.0
text = "Arcade mode"

[node name="Settings" type="Label" parent="."]
margin_left = 64.0
margin_top = 256.0
margin_right = 224.0
margin_bottom = 276.0
text = "Settings"

[node name="Exit" type="Label" parent="."]
margin_left = 64.0
margin_top = 288.0
margin_right = 224.0
margin_bottom = 308.0
text = "Exit"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1144, 656 )
scale = Vector2( 1.72088, 1.72088 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[connection signal="gui_input" from="StoryMode" to="StoryMode" method="_on_story_mode_gui_input"]
[connection signal="mouse_entered" from="StoryMode" to="StoryMode" method="_on_story_mode_mouse_entered"]
